# PS2Keyboard

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild
main/src/: main.c  main.h  ps2keyboard.c  ps2keyboard.h  scancode.h  server.c  server.h  wifi.c  wifi.h
